# Mathilda

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  build.rs
data/glsl/: psrdnoise2d.glsl  shader.frag
data/hlsl/: fbm1.frag.hlsl  fullscreen.vert.hlsl  modify.comp.hlsl  textured.frag.hlsl
data/hlsl/2019-07-29/: textured.frag.hlsl  triangle.frag.hlsl  wnoise.hlsl
data/hlsl/background/: bg.frag.hlsl  bg.vert.hlsl
data/hlsl/generator/: fullscreen.vert.hlsl  modify.comp.hlsl
data/hlsl/noise/: curlnoise3d.hlsl  osnoise4d.hlsl  pnoise2d.hlsl  pnoise3d.hlsl  pnoise4d.hlsl  snoise2d.hlsl  snoise2dprd.hlsl  snoise3d.hlsl  snoise4d.hlsl  util.hlsl  wnoise2d.hlsl  wnoise3d.hlsl  wnoise4d.hlsl
data/hlsl/sprite/: simple.frag.hlsl  simple.vert.hlsl
src/: components.rs  graphics.rs  input.rs  main.rs  main_gen.rs  planner.rs  planner2.rs  planner3.rs  planner4.rs  planner5.rs  renderer.rs  session.rs  states.rs  systems.rs  time.rs  universe.rs  util.rs
src/2019-07-26/: main.rs  render.rs
src/resources/: mod.rs  shaders.rs
src/resources/shaders/: compiler.rs  debug.rs  mod.rs
src/states/: generator.rs  mod.rs  traits.rs
