[package]
name = "mathilda"
description = ""
version = "0.0.1"
authors = ["Christian Sdunek <me@systemcluster.me>"]
repository = "https://github.com/Systemcluster/Mathilda"
edition = "2018"
publish = false
license = "unlicensed"

[[bin]]
name = "mathilda"
path = "src/main.rs"

[profile.dev]
opt-level = 0
panic = "unwind"
debug = true
debug-assertions = true
incremental = true
lto = "off"

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
incremental = true
lto = "off"

[profile.release]
opt-level = 3
panic = "abort"
debug = false
debug-assertions = false
incremental = false
lto = "thin"

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
lto = "thin"

[features]
default = []
hotreload = ["shaderc"]
shaderinfo = ["spirv-reflect"]

[build-dependencies]
log = "0.4.8"
failure = "0.1.6"
shaderc = { git="https://github.com/google/shaderc-rs.git", features=["build-from-source"] }
spirv-reflect = { git="https://github.com/gwihlidal/spirv-reflect-rs", optional=true }

[dependencies]
# graphics crates
wgpu = { package="wgpu", git="https://github.com/gfx-rs/wgpu-rs", branch="master" }
winit = { git="https://github.com/rust-windowing/winit", branch="master" }
spirv-reflect = { git="https://github.com/gwihlidal/spirv-reflect-rs", optional=true }
shaderc = { git="https://github.com/google/shaderc-rs.git", features=["build-from-source"], optional=true }
image = "0.23.0"
# sys crates
log = "0.4.8"
simple_logger = "1.5.0"
color-backtrace = "0.3.0"
raw-cpuid = "7.0.3"
sys-info = "= 0.5.8"
os_info = "2.0.0"
# util crates
serde = { version = "1.0.104", features = ["derive"] }
warmy = "0.13.0"
failure = "0.1.6"
itertools = "0.8.2"
rand = "0.7.3"
dirs = "2.0.2"
chrono = "0.4.10"
tokio = { git="https://github.com/tokio-rs/tokio" }
zerocopy = "0.2.8"
derive-new = "0.5.8"
derive_more = "0.99.2"
smart-default = "0.6.0"
cascade = "0.1.4"
nalgebra = { version = "0.19.0", features = ["mint"] }
include_dir = "0.5.0"
