cargo-features = ["resolver", "strip"]

[package]
name = "mathilda"
description = ""
version = "0.0.1"
authors = ["Christian Sdunek <me@systemcluster.me>"]
repository = "https://github.com/Systemcluster/Mathilda"
edition = "2018"
resolver = "2"
publish = false
license = "unlicensed"

[[bin]]
name = "mathilda"
path = "src/main.rs"

[profile.dev]
opt-level = 1
panic = "unwind"
debug = true
debug-assertions = true
incremental = true
lto = "off"

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
incremental = true
lto = "off"

[profile.release]
opt-level = 3
panic = "abort"
debug = false
debug-assertions = false
incremental = false
lto = "thin"
strip = "symbols"

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
lto = "thin"

[features]
default = []
hotreload = ["shaderc"]
shaderinfo = ["spirv-reflect", "log"]
secure = ["mimalloc/secure"]


[build-dependencies]
shaderc = { git = "https://github.com/google/shaderc-rs", features = ["build-from-source"] }
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs", optional = true }
log = { version = "0.4.8", optional = true }
jwalk = "0.5.1"

[dependencies]
# graphics crates
wgpu = { package="wgpu", git = "https://github.com/gfx-rs/wgpu-rs", branch="master" }
winit = { git = "https://github.com/rust-windowing/winit", branch="master" }
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs", optional = true }
shaderc = { git = "https://github.com/google/shaderc-rs", features = ["build-from-source"], optional = true }
image = "0.23.4"
# sys crates
log = "0.4.8"
pretty_env_logger = "0.4.0"
color-backtrace = "0.4.2"
raw-cpuid = "8.1.0"
sys-info = "0.7.0"
os_info = "2.0.6"
dirs = "2.0.2"
mimalloc = { version = "0.1.19", default-features = false }
# util crates
serde = { version = "1.0.111", features = ["derive"] }
thiserror = "1.0.19"
anyhow = "1.0.31"
warmy = "0.13.0"
itertools = "0.9.0"
rand = "0.7.3"
chrono = "0.4.11"
zerocopy = "0.3.0"
derive-new = "0.5.8"
derive_more = "0.99.7"
smart-default = "0.6.0"
cascade = "0.1.4"
nalgebra = { version = "0.21.0", features = ["mint"] }
include_dir = "0.6.0"
smol = "0.1.10"
futures = "0.3.5"
shipyard = { git = "https://github.com/leudz/shipyard" }
