cargo-features = ["resolver", "strip"]

[package]
authors = ["Christian Sdunek <me@systemcluster.me>"]
description = ""
edition = "2018"
license = "unlicensed"
name = "mathilda"
publish = false
repository = "https://github.com/Systemcluster/Mathilda"
resolver = "2"
version = "0.0.1"

[[bin]]
name = "mathilda"
path = "src/main.rs"

[profile.dev]
debug = true
debug-assertions = true
incremental = true
lto = "off"
opt-level = 0
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3

[profile.test]
debug = true
debug-assertions = true
incremental = true
lto = "off"
opt-level = 1

[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.bench]
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3

[features]
default = []
hotreload = ["shaderc"]
secure = ["mimalloc/secure"]
shaderinfo = ["spirv-reflect", "log"]

[build-dependencies]
jwalk = "0.5.1"
log = { version = "0.4.11", optional = true }
shaderc = {git = "https://github.com/google/shaderc-rs", features = ["build-from-source"]}
spirv-reflect = {git = "https://github.com/gwihlidal/spirv-reflect-rs", optional = true}

[dependencies]
# graphics crates
image = { version = "0.23.8", default-features = false, features = ["png"] }
shaderc = {git = "https://github.com/google/shaderc-rs", features = ["build-from-source"], optional = true}
spirv-reflect = {git = "https://github.com/gwihlidal/spirv-reflect-rs", optional = true}
wgpu = {package = "wgpu", git = "https://github.com/gfx-rs/wgpu-rs", branch = "master"}
winit = {git = "https://github.com/rust-windowing/winit", branch = "master"}
# sys crates
color-backtrace = "0.4.2"
dirs = "3.0.1"
log = "0.4.11"
mimalloc = { version = "0.1.20", default-features = false }
os_info = "2.0.8"
pretty_env_logger = "0.4.0"
raw-cpuid = "8.1.1"
sys-info = "0.7.0"
# util crates
anyhow = "1.0.32"
async-std = { version = "1.6.3", features = ["std", "alloc", "unstable"] }
cascade = "0.1.4"
chrono = "0.4.15"
derive-new = "0.5.8"
derive_more = "0.99.9"
include_dir = "0.6.0"
itertools = "0.9.0"
# nalgebra = {version = "0.21.1", features = ["mint"]}
glam = { version = "0.9.3", features = ["serde", "mint"] }
rand = "0.7.3"
serde = { version = "1.0.115", features = ["derive"] }
shipyard = {git = "https://github.com/leudz/shipyard", default-features = false, features = ["std", "panic", "parallel", "serde1"]}
smart-default = "0.6.0"
thiserror = "1.0.20"
zerocopy = "0.3.0"
